--- a/src/features/relations/list/contacts-container.module.scss
+++ b/src/features/relations/list/contacts-container.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  margin-right: 8px;
 }
 
 .header {
@@ -18,8 +19,7 @@
   @include mixins.scroller(
     colors.$bg-secondary,
     colors.$bg-tertiary,
-    12px,
-    4px,
+    8px,
   );
 
   flex-grow: 1;
